objects/RidesAvailable__c.object
<CustomObject>
    <fields>
        <fullName>CompanyAddress__c</fullName>
        <defaultValue>$Organization.Street + &quot;,&quot; + $Organization.City + &apos;,&apos;+  $Organization.State +&apos;,&apos;+ $Organization.PostalCode</defaultValue>
        <label>Company Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <label>Day of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Work</fullName>
                </value>
                <value>
                    <fullName>From Work</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RideAddress__c</fullName>
        <label>Ride Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_1_Id__c</fullName>
        <label>Rider 1 Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_1_Name__c</fullName>
        <label>Rider 1 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Ride Available</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Ride Available Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rides Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>